gen/container/v1beta1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-container1_beta1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/container/v1beta1/lib)
error[E0423]: expected value, found struct `aggregated::AggregatedActions`
    --> gen/container/v1beta1/lib/src/lib.rs:4184:13
     |
4184 |             aggregated::AggregatedActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `aggregated::AggregatedActions { /* fields */ }`?

error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/container/v1beta1/lib/src/lib.rs:4188:13
     |
4188 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `zones::ZonesActions`
    --> gen/container/v1beta1/lib/src/lib.rs:4192:13
     |
4192 |             zones::ZonesActions
     |             ^^^^^^^^^^^^^^^^^^^ did you mean `zones::ZonesActions { /* fields */ }`?

error[E0423]: expected value, found struct `usable_subnetworks::UsableSubnetworksActions`
    --> gen/container/v1beta1/lib/src/lib.rs:4204:17
     |
4204 |                 usable_subnetworks::UsableSubnetworksActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `usable_subnetworks::UsableSubnetworksActions { /* fields */ }`?

error[E0423]: expected value, found struct `clusters::ClustersActions`
    --> gen/container/v1beta1/lib/src/lib.rs:4524:17
     |
4524 |                 clusters::ClustersActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `clusters::ClustersActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/container/v1beta1/lib/src/lib.rs:4528:17
     |
4528 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `node_pools::NodePoolsActions`
    --> gen/container/v1beta1/lib/src/lib.rs:5231:21
     |
5231 |                     node_pools::NodePoolsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `node_pools::NodePoolsActions { /* fields */ }`?

error[E0423]: expected value, found struct `well_known::WellKnownActions`
    --> gen/container/v1beta1/lib/src/lib.rs:5235:21
     |
5235 |                     well_known::WellKnownActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `well_known::WellKnownActions { /* fields */ }`?

error[E0423]: expected value, found struct `clusters::ClustersActions`
    --> gen/container/v1beta1/lib/src/lib.rs:9829:17
     |
9829 |                 clusters::ClustersActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `clusters::ClustersActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/container/v1beta1/lib/src/lib.rs:9833:17
     |
9833 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `node_pools::NodePoolsActions`
     --> gen/container/v1beta1/lib/src/lib.rs:10452:21
      |
10452 |                     node_pools::NodePoolsActions
      |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `node_pools::NodePoolsActions { /* fields */ }`?

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-container1_beta1`.

To learn more, run the command again with --verbose.
